--- a/Hanging man/Hanging man.csproj
+++ b/Hanging man/Hanging man.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Hanging_man</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
+  </ItemGroup>
+
 </Project>
